'fixed popups on small screen sizes'

--- a/src/blocks/books/__cards/books__cards.css
+++ b/src/blocks/books/__cards/books__cards.css
@@ -3,7 +3,6 @@
     flex-direction: row;
     justify-content: space-around;
     max-width: 80%;
-    height: 340px;
     margin: auto;
     list-style-type: none;
     padding: 0;
