--- a/src/blocks/popup/__image/popup__image.css
+++ b/src/blocks/popup/__image/popup__image.css
@@ -6,6 +6,7 @@
 
 @media screen and (max-width: 525px) {
     .popup__image {
+        max-width: none;
         width: 90vw;
         margin: auto;
     }
