--- a/src/blocks/popup/__info-container/popup__info-container.css
+++ b/src/blocks/popup/__info-container/popup__info-container.css
@@ -7,6 +7,7 @@
 
 @media screen and (max-width: 525px) {
     .popup__info-container {
+        max-width: none;
         width: 100vw;
         margin: auto;
     }
