--- a/src/blocks/popup/__text/popup__text.css
+++ b/src/blocks/popup/__text/popup__text.css
@@ -7,6 +7,7 @@
 
 @media screen and (max-width: 600px) {
     .popup__text {
+        max-width: 90vw;
         font-size: 18px;
         text-align: center;
     }
