--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -1,3 +1,7 @@
 .root {
     margin: auto;
 }
+
+html {
+    scroll-behavior: smooth;
+}
